[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/Sound/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Selection_Ukelele chord 04.smp" type="Sample" id=2]

[sub_resource type="SampleLibrary" id=1]

"samples/Selection_Ukelele chord 04" = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}

[node name="AudioManager" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 600.0
margin/right = 1000.0
margin/bottom = 640.0
script/script = ExtResource( 1 )

[node name="FxPlayer" type="SamplePlayer" parent="."]

config/polyphony = 50
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 0.88
default/filter/gain = 1.0
default/reverb_room = 3
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="BgmPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="AmbientPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="fxButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -150.0
margin/top = 250.0
margin/right = -75.0
margin/bottom = 302.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play fx"
flat = false

[node name="bgmButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 250.0
margin/right = 75.0
margin/bottom = 302.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play bgm"
flat = false

[node name="ambientButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 250.0
margin/right = 225.0
margin/bottom = 302.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play amb"
flat = false


